<resources>
    <string name="app_name">Android_Payment</string>
    <string name="app_title">Cửa hàng thanh toán</string>
    <string name="product_name">Sản phẩm </string>
    <string name="product_price">10,000 VNĐ</string>
    <string name="cart_summary">Tóm tắt đơn hàng</string>
    <string name="subtotal">Tạm tính:</string>
    <string name="total">Tổng cộng:</string>
    <string name="pay_momo">Thanh toán MoMo</string>
    <string name="pay_zalopay">Thanh toán ZaloPay</string>
    <string name="momo_avatar_desc">Hình đại diện MoMo</string>
    <string name="momo_title">Thanh toán MoMo (Sandbox)</string>
    <string name="momo_hint_amount">Nhập số tiền (VNĐ)</string>
    <string name="momo_pay_button">Thanh toán MoMo</string>
</resources>